--- a/backend/package.json
+++ b/backend/package.json
@@ -20,9 +20,11 @@
     "express": "^5.1.0",
     "express-validator": "^7.2.1",
     "firebase-admin": "^13.5.0",
+    "JSON": "^1.0.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.19.0",
-    "mongoose-aggregate-paginate-v2": "^1.1.4"
+    "mongoose-aggregate-paginate-v2": "^1.1.4",
+    "multer": "^2.0.2"
   },
   "devDependencies": {
     "nodemon": "^3.1.10"
