--- a/backend/package.json
+++ b/backend/package.json
@@ -11,7 +11,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "axios": "^1.12.2",
+    "axios": "^1.13.1",
     "bcrypt": "^6.0.0",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
@@ -20,6 +20,7 @@
     "express": "^5.1.0",
     "express-validator": "^7.2.1",
     "firebase-admin": "^13.5.0",
+    "form-data": "^4.0.4",
     "JSON": "^1.0.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.19.0",
